[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = {version = "0.4.22", features = ["serde"] }
futures = "0.3.24"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"

[dependencies.mongodb]
version = "2.3.0"
