[package]

name = "im_ok"
version = "0.1.0"
authors = ["Charalampos Mitrodimas <charmitro@pm.me>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
chrono = {version = "0.4.22", features = ["serde"] }
bson = "2.4.0"
image = "0.24.3"
dotenv = "0.15.0"
num-traits = "0.2.15"
ureq = { version = "2.5.0", features = ["json"] }

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-sync"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
